After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690788 - Critical in gtknotebook dnd with rgba colormap
Critical in gtknotebook dnd with rgba colormap
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkNotebook
2.24.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-12-27 21:05 UTC by Nick Schermer
Modified: 2013-01-21 03:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Set same colormap on popup window (3.81 KB, patch)
2012-12-27 21:05 UTC, Nick Schermer
none Details | Review
Set same colormap on popup window (clean) (623 bytes, patch)
2012-12-27 21:06 UTC, Nick Schermer
accepted-commit_now Details | Review

Description Nick Schermer 2012-12-27 21:05:14 UTC
Created attachment 232303 [details] [review]
Set same colormap on popup window

There is a critical when dnd tabs in a notebook inside a rgba window.

Gtk-CRITICAL **: IA__gtk_paint_extension: assertion `style->depth == gdk_drawable_get_depth (window)' failed
Trace/breakpoint trap (core dumped)

Depth of the notebook is 32, the popup window 24.
Comment 1 Nick Schermer 2012-12-27 21:06:47 UTC
Created attachment 232304 [details] [review]
Set same colormap on popup window (clean)

Sorry for the previous patch, was some rubbish output in there..
Comment 2 Matthias Clasen 2013-01-06 01:26:35 UTC
Review of attachment 232304 [details] [review]:

Looks reasonable