Fix a critical warning in notebook dnd with rgba colormaps

Pointed out by Nick Schermer in
https://bugzilla.gnome.org/show_bug.cgi?id=690788